Update content in payment link page

--- a/source/govuk-payment-pages.html.erb
+++ b/source/govuk-payment-pages.html.erb
@@ -47,43 +47,38 @@ title: GOV.UK payment pages
     <div class="column-two-thirds">
       <h1 class="heading-large">Take payments instantly</h1>
 
-      <p>Payment links allow your service to receive online payments from your users. You don’t need to have a digital service to use payment links.</p>
-
-      <p>You can add a payment link to paper forms, letters or emails - or wherever you’d like your users to see it.</p>
-
-      <div class="responsive-embed responsive-embed--16by9">
-        <div class="responsive-embed__wrapper">
-          <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hLIS2bzfYuM?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-      </div>
-
-      <h2 class="heading-medium">Benefits of using online payments</h2>
-
-      <p>Online payments are 4 times more cost effective than offline methods, like cheques, money orders and cash payments.</p>
-      <p>By using payment links your service can:</p>
-
-      <ul class="list list-bullet"> 
-        <li>speed up payment processes - you’ll be able to receive payments and issue refunds much quicker</li>
-        <li>reduce human error and have fewer manual processes, like taking card payments over the phone</li>
-        <li>receive fewer cheques, BACS and cash payments</li>
+      <p>Use GOV.UK Pay to set up a payment page, which we call a payment link, to: </p>
+      <ul class="list list-bullet">
+        <li>take payments instantly</li>
+        <li>use debit cards, credit cards or digital wallets to take payments</li>
+        <li>give full or partial refunds</li>
+        <li>switch Payment Service Providers, for free, when you choose</li>
+        <li>use custom branding on your payment pages</li>
       </ul>
+      <p>You don’t need any technical knowledge to do this.</p>
+      <p>Create an account for free and try it yourself.</p>
 
-      <h2 class="heading-medium">Setting up a payment link</h2>
-      <p>A payment link is quick and easy to set up and is ready to use right away. You don’t need any technical knowledge to create a payment link. You can create a payment link for a single user or make it reusable for all your users.</p>
-
-      <img class="content-section__image" src="/pay-product-page/images/payment-link-demo.gif" alt="Example of creating a payment link and how the title is used to generate the payment link website address.">
-
-      <p>Add the payment link where your users can see it, like in a paper form, letter or email - or even on your website.</p>
-
-      <img class="content-section__image" src="/pay-product-page/images/self-service-payments-example.svg" alt="Examples of a payment link on a paper form or on an email.">
-
-      <p>When your users access your payment link, they’ll be able to make an online card payment. Your users will receive a payment reference number and a confirmation email. You can use your own payment reference number or let us create one for you.</p>
+      <h2 class="heading-medium">How to take payments</h2>
+      <p>To get set up to take payments you need to create a payment link on GOV.UK. It takes 5 minutes to do.</p>
+      <p>When users access your page they’ll be able to make an online card payment to you.</p>
 
       <img class="content-section__image" src="/pay-product-page/images/self-service-payments-flow.svg" alt="Example of the payment amount and confirmation pages of the payment link user journey.">
 
-      <h2 class="heading-medium">Get started with payment links</h2>
+      <p>Your users will receive a payment reference number and a confirmation email. You can also customise your GOV.UK payment page with a friendly web address.</p>
 
-      <p>Use our <a href="/getstarted">guide to getting started</a> to create an account. Or <a href="/support">contact the team</a> for more information.</p>
+      <h2 class="heading-medium">When to use a payment link</h2>
+      <p>You don’t need to have a digital service to use payment links.</p>
+      <p>You can add a payment link to paper forms, letters, websites or emails. In fact, wherever you’d like your users to see it.</p>
+
+      <img class="content-section__image" src="/pay-product-page/images/self-service-payments-example.svg" alt="Examples of a payment link on a paper form or on an email.">
+
+      <h2 class="heading-medium">Create a payment link</h2>
+      <p>To get started you can:</p>
+      <ul class="list list-bullet">
+        <li>create a payment link in a <a href="https://selfservice.payments.service.gov.uk/create-service/register">test account</a> to see how it works </li>
+        <li>watch our payment links video</li>
+      </ul>
+      <p>If you want to find out more about all that GOV.UK Pay offers, see our <a href="/using-govuk-pay">features page</a>.</p>
     </div>
   </div>
 </div>
