--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -66,11 +66,11 @@ description: Take and process online payments from your users - GOV.UK Pay is a 
         <h2 class="content-section__title heading-medium">Create a hosted payment page or integrate your existing&nbsp;service</h2>
       <div class="grid-row">
           <div class="column-half">
-            <p>If you want to take online payments now and don’t have an online service, <a href="/govuk-payment-pages">create a GOV.UK payment page</a>.</p>
+            <p>If you want to take online payments and don’t have an online service, <a href="/govuk-payment-pages">create a GOV.UK payment page</a>.</p>
             <img class="content-section__image" src="/pay-product-page/images/product-page_images_payment-link.svg" alt="A user-facing payment page with information about what the payment is about and a input box to input the price." />
           </div>
           <div class="column-half">
-            <p>If you <a href="#FIX-ME">integrate your online service</a>, you’ll get greater control over your&nbsp;payments.</p>
+            <p>If you <a href="/api-integration">integrate your online service</a> you’ll get greater control over your&nbsp;payments.</p>
             <img class="content-section__image" src="/pay-product-page/images/product-page_images_api_json_example.svg" alt="An screenshot of an extract of JSON code that would be used in an API call to GOV.UK Pay" />
           </div>
       </div>
