--- a/source/govuk-payment-pages.html.erb
+++ b/source/govuk-payment-pages.html.erb
@@ -23,23 +23,26 @@ title: GOV.UK payment pages
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
             <a href="/using-govuk-pay" itemprop="item"><span itemprop="name">Using GOV.UK Pay</span></a>
           </li>
-          <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/roadmap" itemprop="item"><span itemprop="name">Roadmap</span></a>
+          <li class="sub-navigation__item sub-navigation__item--sub sub-navigation__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+            <a href="/govuk-payment-pages" itemprop="item"><span itemprop="name">GOV.UK payment pages</span></a>
           </li>
-          <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/security" itemprop="item"><span itemprop="name">Security</span></a>
+          <li class="sub-navigation__item sub-navigation__item--sub" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+            <a href="/api-integration" itemprop="item"><span itemprop="name">API integration</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
             <a href="/payment-service-provider" itemprop="item"><span itemprop="name">GOV.UK Pay’s Payment Service Provider</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/direct-debit" itemprop="item"><span itemprop="name">Direct Debit on GOV.UK Pay</span></a>
-          </li>
-          <li class="sub-navigation__item sub-navigation__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/govuk-payment-pages" itemprop="item"><span itemprop="name">GOV.UK payment pages</span></a>
+            <a href="/direct-debit" itemprop="item"><span itemprop="name">Direct Debit</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/apple-pay-and-google-pay" itemprop="item"><span itemprop="name">Using Apple Pay and Google Pay</span></a>
+            <a href="/apple-pay-and-google-pay" itemprop="item"><span itemprop="name">Apple Pay and Google Pay</span></a>
+          </li>
+          <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+            <a href="/roadmap" itemprop="item"><span itemprop="name">Roadmap</span></a>
+          </li>
+          <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+            <a href="/security" itemprop="item"><span itemprop="name">Security</span></a>
           </li>
         </ol>
       </nav>
@@ -56,7 +59,7 @@ title: GOV.UK payment pages
         <li>use custom branding on your payment pages</li>
       </ul>
       <p>You don’t need any technical knowledge to do this.</p>
-      <p>Create an account for free and try it yourself.</p>
+      <p><a href="https://selfservice.payments.service.gov.uk/create-service/register">Create an account</a> for free and try it yourself.</p>
 
       <h2 class="heading-medium">How to take payments</h2>
       <p>To get set up to take payments you need to create a payment link on GOV.UK. It takes 5 minutes to do.</p>
@@ -76,7 +79,7 @@ title: GOV.UK payment pages
       <p>To get started you can:</p>
       <ul class="list list-bullet">
         <li>create a payment link in a <a href="https://selfservice.payments.service.gov.uk/create-service/register">test account</a> to see how it works </li>
-        <li>watch our payment links video</li>
+        <li><a href="https://www.youtube.com/watch?v=hLIS2bzfYuM">watch our payment links video</a></li>
       </ul>
       <p>If you want to find out more about all that GOV.UK Pay offers, see our <a href="/using-govuk-pay">features page</a>.</p>
     </div>
