PP-6992: Replace FCO logo with FCDO image.
- Added new logo file
- Updated CSS to includ custom class for this logo - as it is a lot wider the other logos

--- a/source/pay-product-page/stylesheets/modules/_content-section.scss
+++ b/source/pay-product-page/stylesheets/modules/_content-section.scss
@@ -87,4 +87,15 @@
   &-smaller {
     height: 3.5em;
   }
+
+  &--fcdo{
+    height: auto;
+    max-height: 4em;
+
+    @include govuk-media-query(tablet) {
+      box-sizing: border-box;
+      margin: 0;     
+      padding-right: 20px; 
+    } 
+  }
 }
