Accessibility statement - Address review comments
from https://github.com/alphagov/pay-product-page/pull/274

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -98,7 +98,7 @@ description: Take and process online payments from your users - GOV.UK Pay is a 
         <div class="govuk-grid-column-two-thirds">
           <h2 class="content-section__title govuk-heading-m">Security and relevant standards built&nbsp;in</h2>
           <p class="govuk-body">GOV.UK Pay is robust, secure and fully Payment Card Industry (PCI) compliant.</p>
-          <p class="govuk-body">Read the <a class="govuk-link" href="https://www.payments.service.gov.uk/accessibility-statement/">accessibility statement</a> to check how it meets accessibility standards.</p>
+          <p class="govuk-body">Read the <a class="govuk-link" href="/accessibility-statement/">accessibility statement</a> to check how it meets accessibility standards.</p>
         </div>
       </div>
     </div>
